# Job-Pitch-AI-Agent

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  tests.py
tools/: appointment_scheduler.py  phone_caller.py  pitch_writer.py  whatsapp_chat.py
utils/: openai.py
